# onorbit_digital_twin

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
isaasim_extensions/kcl_project/data/robot/canadarm2_description/: package.xml  setup.py
isaasim_extensions/kcl_project/data/robot/canadarm2_description/meshes/: base_link.mtl  base_link.stl  link_11.dae  link_11.stl  link_21.ply  link_31.dae  link_31.ply  link_41.dae  link_51.mtl  link_61.ply  link_71.dae
isaasim_extensions/kcl_project/data/robot/canadarm2_description/rviz/: canadarm2.rviz
isaasim_extensions/kcl_project/data/robot/canadarm2_description/urdf/: CanadaArm2-DAE-ROS2.urdf  CanadaArm2-DAE.urdf  CanadaArm2-OBJ-ROS2.urdf  CanadaArm2-OBJ.urdf  CanadaArm2-PLY-ROS2.urdf  CanadaArm2-PLY.urdf  CanadaArm2-ROS2.urdf  CanadaArm2.urdf
isaasim_extensions/kcl_project/data/robot/canadarm2_description/urdf/CanadaArm2/configuration/: CanadaArm2_base.usd  CanadaArm2_physics.usd
misc/: ros2_control.usd
ros2_packages/canadarm2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_packages/canadarm2_moveit_config/config/: CanadaArm2.ros2_control.xacro  CanadaArm2.srdf  CanadaArm2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
ros2_packages/canadarm2_moveit_config/launch/: demo.launch.py  isaac_integration.launch.py  move_group.launch.py  moveit_issac_bridge.launch.py  moveit_preset_gui.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  topic_monitor.launch.py  warehouse_db.launch.py
ros2_packages/canadarm2_moveit_config/scripts/: moveit_preset_gui.py  moveit_topic_monitor.py  test_trajectory_publisher.py
(+86 files in other folders)
